--- a/index.html
+++ b/index.html
@@ -150,10 +150,10 @@
                         <img src="./images/home-1.jpeg" alt="">
                       </div>
                       <div class="swiper-slide">
-                        <img src="./images/home-2.png" alt="">
+                        <img src="https://images.unsplash.com/photo-1579624054375-72037da740e5?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" alt="">
                       </div>
                       <div class="swiper-slide">
-                        <img src="./images/home-3.png" alt="">
+                        <img src="https://images.unsplash.com/photo-1585860101517-767d8a345bdb?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1171&q=80" alt="">
                       </div>
                       <div class="swiper-slide">
                         <img src="https://images.unsplash.com/photo-1493106641515-6b5631de4bb9?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1269&q=80" alt="">
