--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 
     <!-- Loader  -->
-    <!-- <div id="loader" class="d-flex">
+    <div id="loader" class="d-flex">
         <div class="text laptop d-flex">
             <div class="box">
                 <h1>Craft</h1>
@@ -36,7 +36,7 @@
             <h2>Handyy.com</h2>
         </div>
         
-    </div> -->
+    </div>
 
 
     <!-- For Phone Menu Box -->
