--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 
     <!-- Loader  -->
-    <div id="loader" class="d-flex">
+    <!-- <div id="loader" class="d-flex">
         <div class="text laptop d-flex">
             <div class="box">
                 <h1>Craft</h1>
@@ -36,7 +36,7 @@
             <h2>Handyy.com</h2>
         </div>
         
-    </div>
+    </div> -->
 
 
     <!-- For Phone Menu Box -->
@@ -135,7 +135,7 @@
                     <a href="#signup" class="nav_link signupbtn ">Sign-Up</a>
                 </li>
                 <li>
-                    <a href="" class="nav_link cart" data-content="0" data-anijs="if: mouseover, do: tada animated"><i class="ri-shopping-cart-2-fill" style="font-size: 2vw;"></i></a>
+                    <a href="" class="nav_link cart"  data-anijs="if: mouseover, do: tada animated"><i class="ri-shopping-cart-2-fill" style="font-size: 2vw;"></i><span></span></a>
                 </li>
             </ul>
         </div>
@@ -303,7 +303,7 @@
                                 <h3>Wall Mirror</h3>
                                 <div class="product-buy-btn d-flex">
                                     <h4 style="font-family: gilroy;">Rs 399 /-</h4>
-                                    <a href=""><button style="padding: 5px 10px 8px;"><span>Buy Now</span></button></a>
+                                    <button class="buybtn" style="padding: 5px 10px 8px;">Buy Now</button>
                                 </div>
                             </div>
                         </div>
@@ -320,7 +320,7 @@
                                 <h3>Curry / Biryani Pot</h3>
                                 <div class="product-buy-btn d-flex">
                                     <h4 style="font-family: gilroy;">Rs 199 /-</h4>
-                                    <a href=""><button style="padding: 5px 10px 8px;"><span>Buy Now</span></button></a>
+                                    <button class="buybtn" style="padding: 5px 10px 8px;">Buy Now</button>
                                 </div>
                             </div>
                         </div>
@@ -337,7 +337,7 @@
                                 <h3>Wooden Candle Holder Set</h3>
                                 <div class="product-buy-btn d-flex">
                                     <h4 style="font-family: gilroy;">Rs 179 /-</h4>
-                                    <a href=""><button style="padding: 5px 10px 8px;"><span>Buy Now</span></button></a>
+                                    <button class="buybtn" style="padding: 5px 10px 8px;">Buy Now</button>
                                 </div>
                             </div>
                         </div>
@@ -354,7 +354,7 @@
                                 <h3>Jewelry Wooden Box For Women</h3>
                                 <div class="product-buy-btn d-flex">
                                     <h4 style="font-family: gilroy;">Rs 420 /-</h4>
-                                    <a href=""><button style="padding: 5px 10px 8px;"><span>Buy Now</span></button></a>
+                                    <button class="buybtn" style="padding: 5px 10px 8px;">Buy Now</button>
                                 </div>
                             </div>
                         </div>
@@ -371,7 +371,7 @@
                                 <h3>Cooking Kadai</h3>
                                 <div class="product-buy-btn d-flex">
                                     <h4 style="font-family: gilroy;">Rs 229 /-</h4>
-                                    <a href=""><button style="padding: 5px 10px 8px;"><span>Buy Now</span></button></a>
+                                    <button class="buybtn" style="padding: 5px 10px 8px;">Buy Now</button>
                                 </div>
                             </div>
                         </div>
@@ -388,7 +388,7 @@
                                 <h3>Multi Color Hand Bag</h3>
                                 <div class="product-buy-btn d-flex">
                                     <h4 style="font-family: gilroy;">Rs 239 /-</h4>
-                                    <a href=""><button style="padding: 5px 10px 8px;"><span>Buy Now</span></button></a>
+                                    <button class="buybtn" style="padding: 5px 10px 8px;">Buy Now</button>
                                 </div>
                             </div>
                         </div>
@@ -405,7 +405,7 @@
                                 <h3>Gemstone Charm Bracelet</h3>
                                 <div class="product-buy-btn d-flex">
                                     <h4 style="font-family: gilroy;">Rs 219 /-</h4>
-                                    <a href=""><button style="padding: 5px 10px 8px;"><span>Buy Now</span></button></a>
+                                    <button class="buybtn" style="padding: 5px 10px 8px;">Buy Now</button>
                                 </div>
                             </div>
                         </div>
@@ -422,7 +422,7 @@
                                 <h3>Handmade Natural Jute Cross body bag</h3>
                                 <div class="product-buy-btn d-flex">
                                     <h4 style="font-family: gilroy;">Rs 120 /-</h4>
-                                    <a href=""><button style="padding: 5px 10px 8px;"><span>Buy Now</span></button></a>
+                                    <button class="buybtn" style="padding: 5px 10px 8px;">Buy Now</button>
                                 </div>
                             </div>
                         </div>
@@ -440,7 +440,7 @@
                                 <h3> Multicolor Mookaite Pebble Dangle Hoops</h3>
                                 <div class="product-buy-btn d-flex">
                                     <h4 style="font-family: gilroy;">Rs 189 /-</h4>
-                                    <a href=""><button style="padding: 5px 10px 8px;"><span>Buy Now</span></button></a>
+                                    <button class="buybtn" style="padding: 5px 10px 8px;">Buy Now</button>
                                 </div>
                             </div>
                         </div>
@@ -457,7 +457,7 @@
                                 <h3>Handcrafted Eagle/Buffalo Skull Intarsia Wood Art</h3>
                                 <div class="product-buy-btn d-flex">
                                     <h4 style="font-family: gilroy;">Rs 150 /-</h4>
-                                    <a href=""><button style="padding: 5px 10px 8px;"><span>Buy Now</span></button></a>
+                                    <button class="buybtn" style="padding: 5px 10px 8px;">Buy Now</button>
                                 </div>
                             </div>
                         </div>
@@ -475,7 +475,7 @@
                                 <h3>Gem & Lava Bead Ring</h3>
                                 <div class="product-buy-btn d-flex">
                                     <h4 style="font-family: gilroy;">Rs 109 /-</h4>
-                                    <a href=""><button style="padding: 5px 10px 8px;"><span>Buy Now</span></button></a>
+                                    <button class="buybtn" style="padding: 5px 10px 8px;">Buy Now</button>
                                 </div>
                             </div>
                         </div>
@@ -492,7 +492,7 @@
                                 <h3> Sun catcher Wall hanging Jhumer</h3>
                                 <div class="product-buy-btn d-flex">
                                     <h4 style="font-family: gilroy;">Rs 299 /-</h4>
-                                    <a href=""><button style="padding: 5px 10px 8px;"><span>Buy Now</span></button></a>
+                                    <button class="buybtn" style="padding: 5px 10px 8px;">Buy Now</button>
                                 </div>
                             </div>
                         </div>
@@ -509,7 +509,7 @@
                                 <h3> Crochet squares pattern tote bag</h3>
                                 <div class="product-buy-btn d-flex">
                                     <h4 style="font-family: gilroy;">Rs 209 /-</h4>
-                                    <a href=""><button style="padding: 5px 10px 8px;"><span>Buy Now</span></button></a>
+                                    <button class="buybtn" style="padding: 5px 10px 8px;">Buy Now</button>
                                 </div>
                             </div>
                         </div>
@@ -527,7 +527,7 @@
                                 <h3>Necklace Set</h3>
                                 <div class="product-buy-btn d-flex">
                                     <h4 style="font-family: gilroy;">Rs 529 /-</h4>
-                                    <a href=""><button style="padding: 5px 10px 8px;"><span>Buy Now</span></button></a>
+                                    <button class="buybtn" style="padding: 5px 10px 8px;">Buy Now</button>
                                 </div>
                             </div>
                         </div>
@@ -545,7 +545,7 @@
                                 <h3>Pressure Cooker </h3>
                                 <div class="product-buy-btn d-flex">
                                     <h4 style="font-family: gilroy;">Rs 150 /-</h4>
-                                    <a href=""><button style="padding: 5px 10px 8px;"><span>Buy Now</span></button></a>
+                                    <button class="buybtn" style="padding: 5px 10px 8px;">Buy Now</button>
                                 </div>
                             </div>
                         </div>
@@ -563,7 +563,7 @@
                                 <h3>Handmade crochet waffle shopping bag</h3>
                                 <div class="product-buy-btn d-flex">
                                     <h4 style="font-family: gilroy;">Rs 520 /-</h4>
-                                    <a href=""><button style="padding: 5px 10px 8px;"><span>Buy Now</span></button></a>
+                                    <button class="buybtn" style="padding: 5px 10px 8px;">Buy Now</button>
                                 </div>
                             </div>
                         </div>
@@ -580,7 +580,7 @@
                                 <h3>Macrame Leaf Wall Hanging</h3>
                                 <div class="product-buy-btn d-flex">
                                     <h4 style="font-family: gilroy;">Rs 439 /-</h4>
-                                    <a href=""><button style="padding: 5px 10px 8px;"><span>Buy Now</span></button></a>
+                                    <button class="buybtn" style="padding: 5px 10px 8px;">Buy Now</button>
                                 </div>
                             </div>
                         </div>
@@ -598,7 +598,7 @@
                                 <h3>Polyresin Lord Ganesha Idol Wooden Key holder</h3>
                                 <div class="product-buy-btn d-flex">
                                     <h4 style="font-family: gilroy;">Rs 350 /-</h4>
-                                    <a href=""><button style="padding: 5px 10px 8px;"><span>Buy Now</span></button></a>
+                                    <button class="buybtn" style="padding: 5px 10px 8px;">Buy Now</button>
                                 </div>
                             </div>
                         </div>
@@ -615,7 +615,7 @@
                                 <h3>Cooking Tawa</h3>
                                 <div class="product-buy-btn d-flex">
                                     <h4 style="font-family: gilroy;">Rs 110 /-</h4>
-                                    <a href=""><button style="padding: 5px 10px 8px;"><span>Buy Now</span></button></a>
+                                    <button class="buybtn" style="padding: 5px 10px 8px;">Buy Now</button>
                                 </div>
                             </div>
                         </div>
@@ -632,7 +632,7 @@
                                 <h3>Shehnai Shape wall clock Wooden Handcrafted </h3>
                                 <div class="product-buy-btn d-flex">
                                     <h4 style="font-family: gilroy;">Rs 290 /-</h4>
-                                    <a href=""><button style="padding: 5px 10px 8px;"><span>Buy Now</span></button></a>
+                                    <button class="buybtn" style="padding: 5px 10px 8px;">Buy Now</button>
                                 </div>
                             </div>
                         </div>
