--- a/index.html
+++ b/index.html
@@ -823,5 +823,19 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="js/mixitup.min.js"></script>
     <script src="js/script.js"></script>
+<!--Start of Tawk.to Script-->
+<script type="text/javascript">
+var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+(function(){
+var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+s1.async=true;
+s1.src='https://embed.tawk.to/63fa490b31ebfa0fe7ef4dfe/1gq4qqm8m';
+s1.charset='UTF-8';
+s1.setAttribute('crossorigin','*');
+s0.parentNode.insertBefore(s1,s0);
+})();
+</script>
+<!--End of Tawk.to Script-->
+
 </body>
 </html>
